Avoid combining smart pointers and qobject parent ownership

Devices are stored as QSharedPointer<Device> mDevices. If something has
the memory managed explicitly we don't want QObject parents to also try
and do the same job.

BUG: 439192


(cherry picked from commit 09c37c1c312991d08c10c7af94a83902150cb3ad)